--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1559,3 +1559,8 @@ a.selected-item:before, .side-menu a:hover:before {
 .black-link:hover {
 	color: #002038;
  }
+
+ .project-image {
+	 max-height: 300px;
+	 max-width: 600px;
+ }
