--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -1,17 +1,17 @@
-<div class="mix <%= project.kind %> col-md-3 col-sm-6 col-xs-6" data-my-order="<%= number %>" style="display: inline-block;" data-bound="">
+<div class="mix <%= project.kind.try(:downcase) %> col-md-3 col-sm-6 col-xs-6" data-my-order="<%= number %>" style="display: inline-block;" data-bound="">
     <div class="img-wrapper overlay-slide-right center">
         <% if project.image.present? %>
-          <img src="assets/projects/<%= project.image %>.jpg" class="center-block img-responsive project-image" alt="<%= project.image %>">
+          <img src="assets/projects/<%= project.image %>.jpg" class="center-block img-responsive project-image-small" alt="<%= project.image %>">
         <% else %>
           <img src="assets/large/0<%= number %>.jpg" class="center-block img-responsive" alt="project">
         <% end %>
         <div class="overlay-content">
             <span><%= project.name %></span>
-            <a href="#test-popup-1" class="open-popup-link">
+            <a href="#test-popup-<%= number %>" class="open-popup-link">
                 <i class="ion-android-search"></i>
             </a>
             <!-- popUp content -->
-            <div id="test-popup-1" class="white-popup mfp-hide">
+            <div id="test-popup-<%= number %>" class="white-popup mfp-hide">
                 <h3><%= project.name %></h3>
                 <div class="heading-line"></div><br>
                 <%= link_to "Github: #{project.name}", "https://github.com/#{project.github_url}", :class => 'black-link' %>
