--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1144,6 +1144,12 @@ a.selected-item:before, .side-menu a:hover:before {
 	letter-spacing: 1.5px;
 	margin: 5px auto;
 }
+.contact .contact-info .info .info-content a {
+	color: #55f;
+}
+.blue-link {
+	color: #55f;
+}
 #map {
 	width: 100%;
 	height: 500px;
