--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -432,7 +432,7 @@
                     </div>
                     <div class="content left round-corners">
                         <h3>Quero Bolsa</h3>
-                        <span class="duration">( Jan. 2017 : NOW )</span>
+                        <span class="duration">( Jan. 2017 : Jun. 2017 )</span>
                         <span class="job-title"> Full-Stack Web Developer</span>
                         <p>Internship as a full-stack web developer using Ruby on Rails framework and agile software development. Joined the content team to improve and completely refactor the team’s section on the site, using technologies such as Sidekiq, Chef recipes and Docker.</p>
                     </div>
@@ -976,7 +976,7 @@
                         <a href="#" class="icon tw ion-social-twitter"></a>
                         <a href="https://github.com/<%= @user.github %>" class="icon gh ion-social-github"></a>
                         <a href="https://plus.google.com/102466688454578137203" class="icon gp ion-social-googleplus"></a>
-                        <a href="https://br.linkedin.com/in/felipe-tuyama-306529b2" class="icon li ion-social-linkedin"></a>
+                        <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                         <a href="#" class="icon pin ion-social-pinterest"></a>
                     </div>
                 </div>
