--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -406,7 +406,7 @@
                         <i class="ion-university"></i>
                     </div>
                     <div class="content left round-corners">
-                        <h3>ITA</h3>
+                        <h3><a href="http://www.ita.br">ITA</a></h3>
                         <span class="duration">( Jan. 2013 : Dec 2017 )</span>
                         <span class="job-title"> Computer Engineer</span>
                         <p>After some years of study and dedication, participating and wining awards on national physics olimpiads, I finally started studying at ITA (institute of aeronautical technology).</p>
@@ -418,7 +418,7 @@
                         <i class="ion-briefcase"></i>
                     </div>
                     <div class="content right round-corners">
-                        <h3>Guichê Virtual</h3>
+                        <h3><a href="https://www.guichevirtual.com.br">Guichê Virtual</a></h3>
                         <span class="duration">( Jan. 2016 : Dec. 2016  )</span>
                         <span class="job-title"> Mobile developer</span>
                         <p>In the first semester, I joined the mobile team in order to create an ios app from scratch for Guichê Virtual, using xcode framework using objective-c language. </p>
@@ -431,7 +431,7 @@
                         <i class="ion-briefcase"></i>
                     </div>
                     <div class="content left round-corners">
-                        <h3>Quero Bolsa</h3>
+                        <h3><a href="http://quero.education">Quero Bolsa</a></h3>
                         <span class="duration">( Jan. 2017 : Jun. 2017 )</span>
                         <span class="job-title"> Full-Stack Web Developer</span>
                         <p>Internship as a full-stack web developer using Ruby on Rails framework and agile software development. Joined the content team to improve and completely refactor the team’s section on the site, using technologies such as Sidekiq, Chef recipes and Docker.</p>
