--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,7 @@
             <a href="#contact-me">Contact Me</a>
         </div>
         <div class="right-menu">
-          <%= link_to 'Manage Account', users_path %>
+            <!-- Void -->
         </div>
     </nav>
     <!-- End Side Menu -->
@@ -287,6 +287,7 @@
                     <h2>AI</h2>
                 </div>
             </div>
+            <hr>
             <!-- End main skills -->
             <div class="other-skills">
                 <h2 class="h2">other skills</h2>
@@ -296,91 +297,35 @@
                 <div class="skills-wrapper row">
                     <!-- Skill No. 1 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-1" data-max="100">
-                        <p class="b_label">communication</p>
-                        <div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="communication" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>75</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="communication" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 2 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-2" data-max="100">
-                        <p class="b_label">organization</p>
-                        <div class=" bar_group__bar thick elastic" data-value="85" data-tooltip="true" data-label="organization" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>85</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="85" data-tooltip="true" data-label="organization" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 3 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-3" data-max="100">
-                        <p class="b_label">visual design</p>
-                        <div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="visual design" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>75</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="75" data-tooltip="true" data-label="visual design" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 4 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-4" data-max="100">
-                        <p class="b_label">programming</p>
-                        <div class=" bar_group__bar thick elastic" data-value="85" data-tooltip="true" data-label="programming" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>85</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="85" data-tooltip="true" data-label="programming" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 5 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-5" data-max="100">
-                        <p class="b_label">planning</p>
-                        <div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="planning" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>80</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="80" data-tooltip="true" data-label="planning" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 6 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-6" data-max="100">
-                        <p class="b_label">learning</p>
-                        <div class=" bar_group__bar thick elastic" data-value="95" data-tooltip="true" data-label="learning" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>95</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="95" data-tooltip="true" data-label="learning" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 7 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-7" data-max="100">
-                        <p class="b_label">marketing</p>
-                        <div class=" bar_group__bar thick elastic" data-value="55" data-tooltip="true" data-label="marketing" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>55</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="55" data-tooltip="true" data-label="marketing" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                     <!-- Skill No. 8 -->
                     <div class="bar_group col-md-6 col-xs-12 group_ident-8" data-max="100">
-                        <p class="b_label">ux-design</p>
-                        <div class=" bar_group__bar thick elastic" data-value="60" data-tooltip="true" data-label="ux-design" data-show-values="true" data-unit="%" style="margin-bottom: 40px;">
-                            <div class="b_tooltip"><span>60</span>
-                                <div class="b_tooltip--tri"></div>
-                            </div>
-                            <p class="bar_label_min">0 %</p>
-                            <p class="bar_label_max">100 %</p>
-                        </div>
+                        <div class=" bar_group__bar thick elastic" data-value="60" data-tooltip="true" data-label="ux-design" data-show-values="true" data-unit="%" style="margin-bottom: 40px;"></div>
                     </div>
                 </div>
                 <!-- End other skills -->
@@ -999,19 +944,10 @@
     <div id="scroll"></div>
     <!-- End scroll percentage -->
 
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/common.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/map.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/util.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/marker.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/infowindow.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/onion.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/stats.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/27/8/intl/pt_br/controls.js"></script>
-
     <!-- Including jQuery file -->
     <%= javascript_include_tag "jquery-1.12.1.min.js" %>
     <!-- Including jQuery.appear file -->
-    <%= javascript_include_tag "jquery.appear.js" %>
+    <%= javascript_include_tag "jquery.appear.js" %>  
     <!-- Bootstrap js file -->
     <%= javascript_include_tag "bootstrap.min.js" %>
     <!-- Bootstrap js file -->
