--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -121,8 +121,8 @@
                     <div class="heading-line"></div>
                     <div class="personal-wrapper">
                         <span><strong>name: </strong><%= @user.name %></span>
-                        <span><strong>E-mail: </strong><%= @user.username %>@gmail.com</span>
-                        <span><strong>phone number: </strong>+(31) 98554 5671</span>
+                        <span><strong>E-mail: </strong>[my-username]@gmail.com</span>
+                        <span><strong>phone number: </strong>(available on linkedin)</span>
                         <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a></span>
                     </div>
                 </div>
@@ -670,15 +670,14 @@
                     <i class="ion-ios-telephone center"></i>
                     <div class="info-content">
                         <h3>call me</h3>
-                        <span>( +55 ) 31 98554 5671</span>
-                        <span>( +55 ) 31 3426 5671</span>
+                        <span>(cellphone on linkedin)</span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12 info">
                     <i class="ion-email center"></i>
                     <div class="info-content">
                         <h3>Send a message</h3>
-                        <span><%= link_to "#{@user.username}@gmail.com", "mailto:#{@user.username}@gmail.com" %></span>
+                        <span><%= link_to "[my-username]@gmail.com", "mailto:#{@user.username}@gmail.com" %></span>
                         <span>Github: <%= link_to @user.github, "https://github.com/#{@user.github}" %></span>
                     </div>
                 </div>
