--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Portfolio</title>
+    <title>Felipe Tuyama</title>
 
-    <meta name="description" content="tottaly responsive personal portfolio template">
-    <meta name="keywords" content="responsive, template, portfolio, html, css, javascript">
-    <meta name="author" content="Ahmed Beheiry">
+    <meta name="description" content="Felipe Tuyama (born 10 Nov 1994) is a Computer Engineer graduated from ITA (Technological Institute of Aeronautics) in 2017. This portfolio website contains more information about his professional profile.">
+    <meta name="keywords" content="Felipe Tuyama, ftuyama, tuyama, felipe-tuyama, Felipe Tuyama de Faria Barbosa">
+    <meta name="author" content="Felipe Tuyama">
 
     <!-- Open Sans Google font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
