--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <title>Felipe Tuyama</title>
 
     <meta name="description" content="Felipe Tuyama (born 10 Nov 1994) is a Computer Engineer graduated from ITA (Technological Institute of Aeronautics) in 2017. This portfolio website contains more information about his professional profile.">
-    <meta name="keywords" content="Felipe Tuyama, ftuyama, tuyama, felipe-tuyama, Felipe Tuyama de Faria Barbosa">
+    <meta name="keywords" content="Felipe Tuyama,ftuyama,tuyama,felipe-tuyama,Felipe Tuyama de Faria Barbosa,site">
     <meta name="author" content="Felipe Tuyama">
 
     <!-- Open Sans Google font -->
