--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
                         <span><strong>name: </strong><%= @user.name %></span>
                         <span><strong>E-mail: </strong>[my-username]@gmail.com</span>
                         <span><strong>phone number: </strong>(available on linkedin)</span>
-                        <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a></span>
+                        <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://br.linkedin.com/in/felipe-tuyama</a></span>
                     </div>
                 </div>
                 <div class="why-me col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
@@ -143,8 +143,11 @@
                             <div class="acc-content">Simply send me an email or call me on whatsapp. I'd be pleased to discuss some interesting project proposal or revolutionary idea.</div>
                         </div>
                         <div class="acc-item">
-                            <div class="acc-title"><i class="ion-android-navigate"></i> What is my hobbies</div>
-                            <div class="acc-content">I really like to spend time surfing on the net, being with my family inside the country. And of course, play videogames and Pokémon with my cousin and brother.</div>
+                            <div class="acc-title"><i class="ion-android-navigate"></i> Some public appearances</div>
+                            <div class="acc-content"><ul>
+			    	<li><a href="http://www.maximuscolegio.com.br/arquivos_2013/jornal/Jornal%20Maximus-Edi%C3%A7%C3%A3o%209.pdf" class="blue-link">Featured in Maximus</a> - my high school</li>
+				<li><a href="http://www.ita.br/noticias169" class="blue-link">Featured in ITA</a> - my undergraduate university</li>
+			    </ul></div>
                         </div>
                     </div>
                     <!-- End Accordion -->
