--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
                         <span><strong>name: </strong><%= @user.name %></span>
                         <span><strong>E-mail: </strong>[my-username]@gmail.com</span>
                         <span><strong>phone number: </strong>(available on linkedin)</span>
-                        <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://br.linkedin.com/in/felipe-tuyama</a></span>
+                        <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a></span>
                     </div>
                 </div>
                 <div class="why-me col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
