--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -122,8 +122,7 @@
                     <div class="heading-line"></div>
                     <div class="personal-wrapper">
                         <span><strong>name: </strong><%= @user.name %></span>
-                        <span><strong>E-mail: </strong>[my-username]@gmail.com</span>
-                        <span><strong>phone number: </strong>(available on linkedin)</span>
+                        <span><strong>graduation: </strong>ITA (T-17)</span>
                         <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a></span>
                     </div>
                 </div>
@@ -143,8 +142,8 @@
                             <div class="acc-content">Simply send me an email or call me on whatsapp. I'd be pleased to discuss some interesting project proposal or revolutionary idea.</div>
                         </div>
                         <div class="acc-item">
-                            <div class="acc-title"><i class="ion-android-navigate"></i> Some public appearances</div>
-                            <div class="acc-content"><ul>
+                            <div class="acc-title active"><i class="ion-android-navigate"></i> Some public appearances</div>
+                            <div class="acc-content" style="display: block;"><ul>
 			    	<li><a href="http://www.maximuscolegio.com.br/arquivos_2013/jornal/Jornal%20Maximus-Edi%C3%A7%C3%A3o%209.pdf" class="blue-link">Featured in Maximus</a> - my high school</li>
 				<li><a href="http://www.ita.br/noticias169" class="blue-link">Featured in ITA</a> - my undergraduate university</li>
 			    </ul></div>
