--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -123,6 +123,8 @@
                     <div class="personal-wrapper">
                         <span><strong>name: </strong><%= @user.name %></span>
                         <span><strong>graduation: </strong>ITA (T-17)</span>
+                        <a href="https://github.com/<%= @user.github %>" class="icon gh ion-social-github"></a>
+                        <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
                         <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a></span>
                     </div>
                 </div>
