--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -125,7 +125,10 @@
                         <span><strong>graduation: </strong>ITA (T-17)</span>
                         <a href="https://github.com/<%= @user.github %>" class="icon gh ion-social-github"></a>
                         <a href="https://br.linkedin.com/in/felipe-tuyama" class="icon li ion-social-linkedin"></a>
-                        <span><strong>website: </strong><a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br><a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a></span>
+                        <span><strong>website:</strong>
+                            <a class="blue-link" href="https://github.com/<%= @user.github %>">www.github.com/<%= @user.github %></a><br>
+                            <a class="blue-link" href="https://br.linkedin.com/in/felipe-tuyama">https://www.linkedin.com/in/felipe-tuyama</a>
+                        </span>
                     </div>
                 </div>
                 <div class="why-me col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
